# jibuff

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.omm/command-surface/: description.md  diagram.mmd  meta.yaml
.omm/command-surface/cleanup-cmd/: description.md  meta.yaml
.omm/command-surface/doctor-cmd/: description.md  meta.yaml
.omm/data-flow/: context.md  description.md  diagram.mmd  meta.yaml
.omm/overall-architecture/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml
.omm/request-lifecycle/: concern.md  context.md  description.md  diagram.mmd  meta.yaml
docs/: architecture.md  interview-scoring.md  modes.md
evaluators/: quality.py
interview/: ambiguity.py  engine.py  risk.py  validation_scope.py
jibuff_mcp/: server.py
mcp/: server.py
orchestrator/: agent_runner.py  config.py  loop_controller.py  main.py  ops.py  runtime_store.py  task_queue.py
reporters/: escalation.py  failure_report.py  progress.py  tracer.py
scripts/: install.sh
spec/: acceptance.md  constitution.md  plan.md  product_spec.md  tasks.md
storage/: artifacts.py  state.json  task_status.json
tests/: test_artifacts.py  test_escalation.py  test_execution.py  test_interview.py  test_mcp_server.py  test_ops.py  test_quality_evaluator.py  test_rtc_validators.py  test_runtime_store.py  test_smoke.py  test_tracer.py  test_validators.py
validators/: device.py  fallback.py  firewall.py  lint.py  network.py  security.py  tests.py  types.py
(+110 files in other folders)
