[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "interview", "validators", "reporters", "storage", "mcp"]

[project]
name = "jibuff"
version = "0.1.0"
description = "Absorb the jitter in your requirements. A spec-driven workflow harness for AI coding agents."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
rtc = [
    "playwright>=1.49.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
]
all = [
    "jibuff[rtc,mcp,dev]",
]

[project.scripts]
jibuff = "orchestrator.main:app"
jb = "orchestrator.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.server", "orchestrator.main"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=orchestrator --cov=validators --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "orchestrator/main.py"]
